kubernetes/apps/external-endpoints/services/app/pihole/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole
  labels:
    kubernetes.io/service-name: pihole
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.99.2
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: http
    port: 80
    protocol: TCP
    appProtocol: http
